--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
     </div>
 
     <!-- Script -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
